Fix GL context violation: defer all layer GL init to first render()
TestWorldLayer was calling ModelBuilder.buildModel() (glGenVertexArrays etc.)
in onPush(), before window.create() — no GL context exists at that point.

Fix: split loading into two phases:
  onPush()  → returns a CPU-only OBJ parse job (no GL calls)
  render()  → lazy GL upload on first call (rawVerts != null guard)

LayerManager now accumulates onPush() jobs in pushJobs and exposes
drainPushJobs(). JobModule.start(LayerManager) drains and runs them
with a CountDownLatch before entering the render loop, so assets are
parsed before frame 1 while GL upload still happens lazily on the
render thread.

Layer.java javadoc updated to make the no-GL-in-onPush() contract
explicit for all future layer implementations.

https://claude.ai/code/session_01PRc2eZuNGHEQCoHWuaZgz4